Text-field added
There's a new text field to update the email or password (ain't supposed to be functional)

--- a/Styles.css
+++ b/Styles.css
@@ -1,8 +1,4 @@
-<<<<<<< Updated upstream
 body{
     background-color: white;
-=======
-body{
-    background-color: white;
->>>>>>> Stashed changes
+    visibility: visible;
 }
